--- a/intro.html
+++ b/intro.html
@@ -7,7 +7,7 @@
 <body>
   <p>Ahmed Elakwah</p>
   <p>9/5/2024</p>
-  <p>Internet the name of the course</p>
+  <p>web and design html</p>
   <p>Internet your instructor's name</p>
   <hr>
 
