--- a/intro.html
+++ b/intro.html
@@ -8,7 +8,7 @@
   <p>Ahmed Elakwah</p>
   <p>9/5/2024</p>
   <p>web and design html</p>
-  <p>Internet your instructor's name</p>
+  <p>kenny Kadilov</p>
   <hr>
 
   <p>Insert the degree or certificate you working toward</p>
