--- a/intro.html
+++ b/intro.html
@@ -11,7 +11,7 @@
   <p>kenny Kadilov</p>
   <hr>
 
-  <p>Insert the degree or certificate you working toward</p>
+  <p>bachelors</p>
   <p>Insert any relative work experience or web page development experience</p>
   <p>Insert a fun fact about yourself</p>
   <hr>
