--- a/intro.html
+++ b/intro.html
@@ -12,7 +12,7 @@
   <hr>
 
   <p>bachelors</p>
-  <p>Insert any relative work experience or web page development experience</p>
+  <p>none</p>
   <p>Insert a fun fact about yourself</p>
   <hr>
 
