--- a/intro.html
+++ b/intro.html
@@ -13,7 +13,7 @@
 
   <p>bachelors</p>
   <p>none</p>
-  <p>Insert a fun fact about yourself</p>
+  <p>im funny</p>
   <hr>
 
   <p>Insert any questions you have at this time</p>
